# lab09

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  DESCRIPTION  Dockerfile  LICENSE  README.md  README2.md  hello_world.cpp
.github/workflows/: ci.yml  docker.yml  package.yml
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  check  cmake_install.cmake
_build/Testing/Temporary/: CTestCostData.txt
_build/_CPack_Packages/Linux-Source/TGZ/print-...-Source/: .travis.yml  CMakeLists.txt  README.md  hello_world.cpp
_build/_CPack_Packages/Linux-Source/TGZ/print-...-Source/.github/workflows/: ci.yml
_build/_CPack_Packages/Linux-Source/TGZ/print-...-Source/_build/: CMakeCache.txt
_builds/: CMakeCache.txt  CTestTestfile.cmake  Makefile  check  cmake_install.cmake
_builds/Testing/Temporary/: CTestCostData.txt
demo/: main.cpp
include/: print.hpp
sources/: print.cpp
tests/: test1.cpp
